WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194914
Clicking "Go Back" on a safe browsing warning before a WKWebView has loaded any page should request to close the WKWebView
https://bugs.webkit.org/show_bug.cgi?id=194914
Summary
Clicking "Go Back" on a safe browsing warning before a WKWebView has loaded a...
Alex Christensen
Reported
2019-02-21 12:51:18 PST
Clicking "Go Back" on a safe browsing warning before a WKWebView has loaded any page should request to close the WKWebView
Attachments
Patch
(8.47 KB, patch)
2019-02-21 13:06 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(7.87 KB, patch)
2019-02-21 14:27 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2019-02-21 13:06:53 PST
Created
attachment 362633
[details]
Patch
Alex Christensen
Comment 2
2019-02-21 13:06:57 PST
<
rdar://problem/47586889
>
Alex Christensen
Comment 3
2019-02-21 14:27:20 PST
Created
attachment 362648
[details]
Patch
Geoffrey Garen
Comment 4
2019-02-21 17:01:07 PST
Comment on
attachment 362648
[details]
Patch r=me
WebKit Commit Bot
Comment 5
2019-02-21 17:58:40 PST
Comment on
attachment 362648
[details]
Patch Clearing flags on attachment: 362648 Committed
r241926
: <
https://trac.webkit.org/changeset/241926
>
WebKit Commit Bot
Comment 6
2019-02-21 17:58:41 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug